--- a/index.html
+++ b/index.html
@@ -23,9 +23,43 @@
       }
     }
   </script>
-  
 </head>
-<body>
+
+
+<body class="max-w-screen-xl mx-auto px-3  lg:px-28 pt-3 lg:pt-8">
+  <!-- header section -->
+  <header class="flex flex-col md:flex-row gap-x-2 gap-y-9">
+    <!-- text content -->
+     <div>
+      <h1 class="text-5xl md:text-6xl">It's good <br>
+        tea time at The <br>Tea House
+      </h1>
+      <p class="text-[#777777] w-3/4 mt-7 mb-7">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
+      <button class="bg-gradient-to-r from-orange-500 to-red-500 px-4 py-2 text-white text-xl font-bold rounded-lg">Explore More <i class="fa-solid fa-arrow-right -rotate-45"></i></button>
+     </div>
+     <!-- image content -->
+      <div class="relative">
+        <!-- image -->
+        <div>
+          <img src="images/banner.png" alt="">
+        </div>
+        <!-- card -->
+         <div class="absolute flex gap-x-2 items-center bg-white shadow-xl px-2 py-2 md:px-5 md:py-5 rounded-lg right-44 bottom-0 lg:right-64 ">
+          <!-- icon -->
+           <div><i class="fa-solid fa-star text-2xl text-amber-500"></i></div>
+           <!-- text -->
+            <div>
+              <h3 class="lg:text-2xl font-bold">5.00</h3>
+              <p class=" text-gray-500">Trust Pilot Ratings</p>
+            </div>
+         </div>
+      </div>
+  </header>
+  <main>
+
+  </main>
+  <footer>
   
+  </footer>
 </body>
 </html>
