--- a/index.html
+++ b/index.html
@@ -55,11 +55,51 @@
          </div>
       </div>
   </header>
-  <main>
 
+<!-- main section -->
+  <main> 
+  <!-- Featured section -->
+   <section class="mt-10 mb-20">
+    <!-- title -->
+    <div class="text-center">
+      <h1 class="font-bold text-3xl">Our Featured Products</h1>
+    <p class=" text-gray-600 w-full lg:w-3/4 mx-auto mt-3 lg:mt-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+    </div>
+    <!-- Product card -->
+    <div class="grid grid-cols-2 lg:grid-cols-4 gap-6 text-center mt-6">
+      <!-- milk tea -->
+      <div class="rounded-xl bg-gray-100 shadow-2xl py-7">
+        <img class="mx-auto" src="images/tea-1.png" alt="">
+        <h3 class="text-xl font-bold mt-3">Milk Tea</h3>
+        <p>Creamer could be replaced by fresh milk</p>
+      </div>
+
+      <!-- black tea -->
+      <div class="rounded bg-gray-100 shadow-2xl py-7">
+        <img class="mx-auto" src="images/tea-2.png" alt="">
+        <h3 class="text-xl font-bold mt-3">Black Tea</h3>
+        <p>Creamer could be replaced by fresh milk</p>
+      </div>
+
+      <!-- Lemon Tea -->
+      <div class="rounded bg-gray-100 shadow-2xl py-7">
+        <img class="mx-auto" src="images/tea-3.png" alt="">
+        <h3 class="text-xl font-bold mt-3">Lemon Tea</h3>
+        <p>Creamer could be replaced by fresh milk</p>
+      </div>
+
+      <!-- Green Tea -->
+      <div class="rounded bg-gray-100 shadow-2xl py-7">
+        <img class="mx-auto" src="images/tea-4.png" alt="">
+        <h3 class="text-xl font-bold mt-3">Green Tea</h3>
+        <p>Creamer could be replaced by fresh milk</p>
+      </div>
+
+    </div>
+   </section>
   </main>
+
   <footer>
-  
   </footer>
 </body>
 </html>
