--- a/index.html
+++ b/index.html
@@ -97,6 +97,28 @@
 
     </div>
    </section>
+
+   <!-- Great tea  -->
+    <section class="flex flex-col md:flex-row gap-10 mb-20">
+      <!-- card -->
+       <div class="grid grid-cols-2 grid-rows-3 w-full md:w-1/2 gap-2">
+
+        <div class="rounded-lg bg-gradient-to-r from-red-100 to-red-50"></div>
+        <div class="rounded-lg row-span-2 bg-[#E6A6231A]"><img class="mx-auto py-3" src="images/fresh-1.png" alt=""></div>
+        <div class="rounded-lg row-span-2 bg-[#5776391A]"><img class="mx-auto py-3" src="images/fresh-2.png" alt=""></div>
+        <div class="rounded-lg bg-gradient-to-r from-gray-300 to-gray-100"></div>
+
+       </div>
+       <!-- info -->
+        <div class="w-full md:w-1/2">
+          <h1 class="font-bold text-4xl mb-5">Great Tea, Freshly <br> Presented</h1>
+          <p class="text-gray-500 text-sm mb-7">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+          <h3 class="font-bold text-lg mb-2.5">Unique Taste</h3>
+          <p class="text-gray-500 text-sm mb-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <h3 class="font-bold text-lg mb-2.5">Premium Quality</h3>
+          <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
+    </section>
   </main>
 
   <footer>
