--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
    </section>
 
    <!-- Great tea  -->
-    <section class="flex flex-col md:flex-row gap-10 mb-20">
+    <section class="flex flex-col-reverse md:flex-row gap-10 mb-20">
       <!-- card -->
        <div class="grid grid-cols-2 grid-rows-3 w-full md:w-1/2 gap-2">
 
@@ -119,6 +119,7 @@
           <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
         </div>
     </section>
+
   </main>
 
   <footer>
