reviews section done

--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
       <div class="rounded-xl bg-gray-100 shadow-2xl py-7">
         <img class="mx-auto" src="images/tea-1.png" alt="">
         <h3 class="text-xl font-bold mt-3">Milk Tea</h3>
-        <p>Creamer could be replaced by fresh milk</p>
+        <p class="text-gray-500 text-sm">Creamer could be replaced by fresh milk</p>
       </div>
 
       <!-- black tea -->
       <div class="rounded bg-gray-100 shadow-2xl py-7">
         <img class="mx-auto" src="images/tea-2.png" alt="">
         <h3 class="text-xl font-bold mt-3">Black Tea</h3>
-        <p>Creamer could be replaced by fresh milk</p>
+        <p class="text-gray-500 text-sm">Creamer could be replaced by fresh milk</p>
       </div>
 
       <!-- Lemon Tea -->
       <div class="rounded bg-gray-100 shadow-2xl py-7">
         <img class="mx-auto" src="images/tea-3.png" alt="">
         <h3 class="text-xl font-bold mt-3">Lemon Tea</h3>
-        <p>Creamer could be replaced by fresh milk</p>
+        <p class="text-gray-500 text-sm">Creamer could be replaced by fresh milk</p>
       </div>
 
       <!-- Green Tea -->
       <div class="rounded bg-gray-100 shadow-2xl py-7">
         <img class="mx-auto" src="images/tea-4.png" alt="">
         <h3 class="text-xl font-bold mt-3">Green Tea</h3>
-        <p>Creamer could be replaced by fresh milk</p>
+        <p class="text-gray-500 text-sm">Creamer could be replaced by fresh milk</p>
       </div>
 
     </div>
@@ -116,10 +116,69 @@
           <h3 class="font-bold text-lg mb-2.5">Unique Taste</h3>
           <p class="text-gray-500 text-sm mb-5">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
           <h3 class="font-bold text-lg mb-2.5">Premium Quality</h3>
-          <p>Premium Quality that makes tea more elegant and more durable when you use it.</p>
+          <p class="text-gray-500 text-sm">Premium Quality that makes tea more elegant and more durable when you use it.</p>
         </div>
     </section>
 
+    <!-- Reviews section -->
+     <section class="bg-gradient-to-r from-orange-500 to-red-500 mb-20 grid grid-cols-1 md:grid-cols-2 rounded-lg">
+      <!-- text -->
+       <div class="text-center md:text-left mx-auto  md:w-full px-5 lg:px-10 py-12 lg:py-44">
+        <h1 class="text-white text-4xl md:text-5xl font-bold mb-4">Meet Our Super Clients</h1>
+        <p class="text-sm text-white mb-4">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <button class="text-orange-700 bg-white font-bold px-4 py-2 rounded-lg">Show All</button>
+       </div>
+
+       <!-- review card section -->
+
+        <div class="relative pb-12 md:py-24">
+
+          <!-- top card -->
+           <div class="bg-white relative w-2/3 ml-28 md:w-3/4 md:ml-24 rounded-lg mb-10 opacity-40 ">
+
+            <div class="absolute -top-6 -left-7 md:bottom-20 md:-left-7">
+              <img src="images/client.png" alt="">
+            </div>
+            <div class="px-8 py-10">
+              <p class="text-gray-500 text-sm mb-3">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h5 class="font-bold">Ilham Yuda</h5>
+              <h5 class="text-gray-500 text-sm">Businessman</h5>
+            </div>
+
+           </div>
+
+           <!-- middle card -->
+           <div class="bg-white absolute z-10 top-32 -left-20 md:top-52 md:-left-20 w-2/3 ml-28 md:w-3/4 md:ml-24 rounded-lg mb-10">
+
+            <div class="absolute -top-6 -left-7 md:bottom-20 md:-left-7">
+              <img src="images/client.png" alt="">
+            </div>
+            <div class="px-8 py-10">
+              <p class="text-gray-500 text-sm mb-3">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h5 class="font-bold">Ilham Yuda</h5>
+              <h5 class="text-gray-500 text-sm">Businessman</h5>
+            </div>
+            <div class="absolute top-40 md:top-36 right-4">
+              <img src="images/circles.png" alt="">
+            </div>
+           </div>
+
+           <!-- bottom card -->
+           <div class="bg-white relative w-2/3 ml-28 md:w-3/4 md:ml-24 rounded-lg opacity-40">
+
+            <div class="absolute -top-6 -left-7 md:bottom-20 md:-left-7">
+              <img src="images/client.png" alt="">
+            </div>
+            <div class="px-8 py-10">
+              <p class="text-gray-500 text-sm mb-3">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+              <h5 class="font-bold">Ilham Yuda</h5>
+              <h5 class="text-gray-500 text-sm">Businessman</h5>
+            </div>
+
+           </div>
+
+        </div>
+     </section>
   </main>
 
   <footer>
