--- a/index.html
+++ b/index.html
@@ -179,6 +179,60 @@
 
         </div>
      </section>
+
+     <!-- News section -->
+      <section class="mb-20">
+        <!-- description -->
+        <div class="text-center mx-auto mb-10">
+          <h1 class="text-4xl  font-bold mb-5">News & Events</h1>
+          <p class="w-full md:w-2/3 mx-auto text-sm text-gray-600">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        </div>
+
+        <!-- card -->
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-3 w-full">
+
+          <!-- news card 1 -->
+           <div class="border-2 py-3 md:px-3 pl-10">
+            <!-- image -->
+            <div class="">
+              <img src="images/news-1.png" alt="">
+            </div>
+            <div>
+              <p class="text-sm text-gray-500 mt-5">Feb 05, 2027</p>
+              <h4 class="font-bold text-lg mt-2">Collecting 8 points for <br> discount</h4>
+              <p class="text-gray-500 mt-1">There are many variations of passages of <br> Lorem Ipsum available.</p>
+              <h5 class="font-bold text-sm mt-2">Learn More</h5>
+            </div>
+           </div>
+
+           <!-- news card 2 -->
+           <div class="border-2 py-3 md:px-3 pl-10">
+            <!-- image -->
+            <div class="">
+              <img src="images/news-2.png" alt="">
+            </div>
+            <div>
+              <p class="text-sm text-gray-500 mt-5">Feb 05, 2027</p>
+              <h4 class="font-bold text-lg mt-2">Collecting 8 points for <br> discount</h4>
+              <p class="text-gray-500 mt-1">There are many variations of passages of <br> Lorem Ipsum available.</p>
+              <h5 class="font-bold text-sm mt-2">Learn More</h5>
+            </div>
+           </div>
+           <!-- news card 3 -->
+           <div class="border-2 py-3 md:px-3 pl-10">
+            <!-- image -->
+            <div class="">
+              <img src="images/news-3.png" alt="">
+            </div>
+            <div>
+              <p class="text-sm text-gray-500 mt-5">Feb 05, 2027</p>
+              <h4 class="font-bold text-lg mt-2">Collecting 8 points for <br> discount</h4>
+              <p class="text-gray-500 mt-1">There are many variations of passages of <br> Lorem Ipsum available.</p>
+              <h5 class="font-bold text-sm mt-2">Learn More</h5>
+            </div>
+           </div>
+        </div>
+      </section>
   </main>
 
   <footer>
