added more responsive

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-3 w-full">
 
           <!-- news card 1 -->
-           <div class="border-2 py-3 md:px-3 pl-10">
+           <div class="border-2 py-3 px-3 ">
             <!-- image -->
             <div class="">
               <img src="images/news-1.png" alt="">
@@ -206,7 +206,7 @@
            </div>
 
            <!-- news card 2 -->
-           <div class="border-2 py-3 md:px-3 pl-10">
+           <div class="border-2 py-3 px-3">
             <!-- image -->
             <div class="">
               <img src="images/news-2.png" alt="">
@@ -219,7 +219,7 @@
             </div>
            </div>
            <!-- news card 3 -->
-           <div class="border-2 py-3 md:px-3 pl-10">
+           <div class="border-2 py-3 px-3">
             <!-- image -->
             <div class="">
               <img src="images/news-3.png" alt="">
